--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "react": ">=18.0.0",
-    "convex": ">=1.23.0",
     "@radix-ui/react-dialog": ">=1.1.10",
     "@radix-ui/react-popover": ">=1.1.10",
     "@radix-ui/react-separator": ">=1.1.4",
-    "@radix-ui/react-slot": ">=1.2.0",
-    "tailwindcss": ">=4.0.0"
+    "@radix-ui/react-slot": "^1.2.0",
+    "convex": ">=1.23.0",
+    "react": ">=18.0.0",
+    "tailwindcss": "^4.1.4"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.8",
+    "@tailwindcss/vite": "^4.1.4",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.503.0",
