--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "@radix-ui/react-dialog": ">=1.1.10",
+    "@radix-ui/react-dialog": ">=1.1.7",
     "@radix-ui/react-popover": ">=1.1.10",
-    "@radix-ui/react-separator": ">=1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-separator": ">=1.1.3",
+    "@radix-ui/react-slot": ">=1.2.0",
     "convex": ">=1.23.0",
-    "react": ">=18.0.0",
+    "react": ">=19.0.0",
     "tailwindcss": "^4.1.4"
   },
   "dependencies": {
