--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@andromedax684/voting-widget",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "type": "module",
   "main": "src/voting-widget.tsx",
   "types": "src/voting-widget.tsx",
   "repository": {
     "type": "git",
-    "url": "https://github.com/AndromedaX684/voting-widget.git"
+    "url": "git+https://github.com/AndromedaX684/voting-widget.git"
   },
   "author": "Henry Levo",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.503.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8"
